# zelda-linker

./: .gitignore  README.md  environment.yml  pyproject.toml
dockerfiles/: dev.Dockerfile
src/zelda/: __init__.py  cli.py  types.py
src/zelda/elf/: display.py  parse.py
tests/elf/: conftest.py  test_parse.py
